--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Actus Tips</title>
+  <title>Jota Tips</title>
   <link href="css/style.min.css" rel="stylesheet">
    <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -21,14 +21,14 @@
     <!-- End Google Tag Manager (noscript) -->
   <header class="container">
     <div class="container_foto">
-        <img class="foto_img" src="https://actustips.com/imagem/logo013.webp" alt="">
+        <img class="foto_img" src="https://fv.jotatips.com/bota.svg" alt="">
     </div>
-    <div class="nombre">Actus Tips</div>
+    <div class="nombre">Jota Tips</div>
 
 </header>
 <section class="container">
     <div class="container_enlaces">
-        <a href="https://cassino.konihi.com" class="enlaces" target="_blank">ABRIR SUA CONTA NA PLATAFORMA</a>
+        <a href="#" class="enlaces" target="_blank">ABRIR SUA CONTA NA PLATAFORMA</a>
         
         <a href="https://t.me/jotainvestimentos" class="enlaces" target="_blank">NOSSO CANAL GRÁTIS</a>
         <a href="/xpto/index.html" class="enlaces" target="_blank">Robôs de análise</a>
@@ -39,7 +39,7 @@
 </section>
 <footer class="container">
     <div class="footer">
-      2021 - 2024 Actus Tips © Todos os direitos reservados<br>
+      2021 - 2024 Jota Tips © Todos os direitos reservados<br>
       Esse site não possui nenhuma ligação com o Facebook, Twitter, Google ou Instagram<br>
       Ao adentrar em nosso grupo free você concorda com as Regras do canal.<br>
       <a class="link" href="/termos">Termos de uso</a>| <a class="link" href="/privacidade">Política de privacidade</a> | <a class="link" href="/consumivel">Produto consumível</a> <br>
