--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </header>
 <section class="container">
     <div class="container_enlaces">
-        <a href="#" class="enlaces" target="_blank">ABRIR SUA CONTA NA PLATAFORMA</a>
+        <a href="https://onabet.cxclick.com/visit/?bta=107773&brand=onabet" class="enlaces" target="_blank">ABRIR SUA CONTA NA PLATAFORMA</a>
         
         <a href="https://t.me/jotainvestimentos" class="enlaces" target="_blank">NOSSO CANAL GRÁTIS</a>
         <a href="/xpto/index.html" class="enlaces" target="_blank">Robôs de análise</a>
