--- a/rdd/index.html
+++ b/rdd/index.html
@@ -4,26 +4,24 @@
 <meta charset="utf-8"/> <!-Define o conjunto de caracteres usados no documento->
 <title>Meu Redirect</title> <!-Define o título do documento na aba do navegador->
 
-
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-56DSNPPX');</script>
+    })(window,document,'script','dataLayer','GTM-5JM46SFJ');</script>
     <!-- End Google Tag Manager -->
-
 
 <script type="text/javascript"> // Tipo do Script
 function redirectTime(){ // Função que define o tempo
-window.location = "https://t.me/+_9hCW89WnVw5ZjAx" //Define o link de redirecionamento
+window.location = "https://chat.whatsapp.com/HYaNvjawiUEDFN6nKW7S13" //Define o link de redirecionamento
 }
 </script>
 </head>
-<body onLoad="setTimeout('redirectTime()', 1)"> <!- Defina o tempo para redirecionamento->
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56DSNPPX"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<body onLoad="setTimeout('redirectTime()', 0)"> <!- Defina o tempo para redirecionamento->
+     <!-- Google Tag Manager (noscript) -->
+     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JM46SFJ"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
