--- a/rdd/index.html
+++ b/rdd/index.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript"> // Tipo do Script
 function redirectTime(){ // Função que define o tempo
-window.location = "https://chat.whatsapp.com/HYaNvjawiUEDFN6nKW7S13" //Define o link de redirecionamento
+window.location = "https://onabet.cxclick.com/visit/?bta=107773&brand=onabet" //Define o link de redirecionamento
 }
 </script>
 </head>
