--- a/instrucao/index.html
+++ b/instrucao/index.html
@@ -103,8 +103,8 @@
       <img src="https://cdn-icons-png.flaticon.com/512/3522/3522091.png" alt="Logo Caveira">
     </div>
     <h1>Manual de Instrução</h1>
-    <p><span class="important">LEIA TUDO PRESTANDO MUITA ATEN</span></p>
-  <p></p>
+    <p><span class="important">LEIA TUDO PRESTANDO MUITA ATENÇÃO</span></p>
+  <p>Devido a alta procura eu criei esse manual de instrução pra você seguir o passo a passo</p>
     <h2>1. Criação da Conta:</h2>
     <p>O primeiro passo é criar sua conta na plataforma indicada.</p>
     <p>Me envie a mensagem no WhatsApp desse jeito:</p>
