--- a/index.html
+++ b/index.html
@@ -1,11 +1,200 @@
-<!DOCTYPE html><html lang="pt_BR"><head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jota Tips</title>
-  <link href="css/style.min.css" rel="stylesheet">
-   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+
+
+
+
+
+  <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jota Tips - Sala de Sinais + Curso Grátis</title>
+    <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css">
+    <link rel="icon" href="https://www.jotainvestimentos.com/favicon.ico">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background: url('https://lp1.empiricus.com.br/renda-semanal-em-dolar-rdl03-b/img/bg-desktop.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #f5f5f5;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                background: url('https://lp1.empiricus.com.br/renda-semanal-em-dolar-rdl03-b/img/bg-mobile.jpg') no-repeat center center fixed;
+                background-size: cover;
+            }
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+            background: rgba(42, 42, 42, 0.8);
+        }
+
+        header img {
+            width: 150px;
+        }
+
+        nav {
+            margin-top: 10px;
+        }
+
+        nav a {
+            color: #f5f5f5;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #28ffbb;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 100px 20px;
+            background: linear-gradient(135deg, rgba(42, 42, 42, 0.8), rgba(40, 255, 187, 0.2));
+            border-radius: 15px;
+            margin: 50px auto;
+            max-width: 800px;
+            position: relative;
+        }
+
+        .hero h1 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: #28ffbb;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+
+        .hero a {
+            background-color: #28ffbb;
+            color: #2a2a2a;
+            padding: 15px 30px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: transform 0.3s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .hero a:hover {
+            transform: scale(1.1);
+        }
+
+        .links {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background: rgba(42, 42, 42, 0.8);
+            border-radius: 15px;
+        }
+
+        .links a {
+            display: block;
+            background: rgba(40, 255, 187, 0.1);
+            color: #f5f5f5;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 10px;
+            text-decoration: none;
+            text-align: center;
+            border: 1px solid #28ffbb;
+            transition: background 0.3s ease;
+        }
+
+        .links a:hover {
+            background: rgba(40, 255, 187, 0.2);
+        }
+
+        .social {
+            text-align: center;
+            margin: 50px auto;
+            padding: 20px;
+            background: rgba(42, 42, 42, 0.8);
+            border-radius: 15px;
+            max-width: 800px;
+        }
+
+        .social h2 {
+            color: #28ffbb;
+            margin-bottom: 20px;
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .social-icons a {
+            color: #f5f5f5;
+            font-size: 2rem;
+            transition: transform 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            transform: translateY(-10px);
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: rgba(42, 42, 42, 0.8);
+            margin-top: 50px;
+            color: #969696;
+            font-size: 0.7rem;
+        }
+
+        footer a {
+            color: #28ffbb;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        .floating-icons {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .floating-icons i {
+            position: absolute;
+            color: #969696;
+            font-size: 2rem;
+            animation: float 6s infinite ease-in-out;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(180deg); }
+            100% { transform: translateY(0) rotate(360deg); }
+        }
+    </style>
+
+
+
+
+
+
+
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -19,34 +208,54 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56DSNPPX"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-  <header class="container">
-    <div class="container_foto">
-        <img class="foto_img" src="https://fv.jotatips.com/bota.svg" alt="">
-    </div>
-    <div class="nombre">Jota Tips</div>
 
-</header>
-<section class="container">
-    <div class="container_enlaces">
-        <a href="https://jotatips.com/rdd" class="enlaces" target="_blank">ABRIR SUA CONTA NA PLATAFORMA</a>
-        
-        <a href="https://t.me/jotainvestimentos" class="enlaces" target="_blank">NOSSO CANAL GRÁTIS</a>
-        <a href="/xpto/index.html" class="enlaces" target="_blank">Robôs de análise</a>
-        <a href="/curso" class="enlaces" target="_blank">Curso grátis</a>
-        <a href="https://www.youtube.com/@jotatipsoficial" class="enlaces" target="_blank">Youtube</a>
-        <a href="https://instagram.com/jotatips.ofc" class="enlaces" target="_blank">Instagram</a>
-    </div>
-</section>
-<footer class="container">
-    <div class="footer">
-      2021 - 2024 Jota Tips © Todos os direitos reservados<br>
-      Esse site não possui nenhuma ligação com o Facebook, Twitter, Google ou Instagram<br>
-      Ao adentrar em nosso grupo free você concorda com as Regras do canal.<br>
-      <a class="link" href="/termos">Termos de uso</a>| <a class="link" href="/privacidade">Política de privacidade</a> | <a class="link" href="/consumivel">Produto consumível</a> <br>
-      <p>
-      NADA É IMPOSSÍVEL AO QUE CRER, E NÓS CREMOS!<br>
-      TODA HONRA E TODA GLÓRIA SEJA DADA AO <strong>SENHOR JESUS</strong></p>
-    </div>
-</footer>
+  
+    <header>
+        <img src="https://fv.jotatips.com/bota.svg" alt="Jota Tips Logo">
+        <!-- <nav>
+            <a href="#">Home</a>
+            <a href="#">Contato</a>
+        </nav> -->
+    </header>
 
-</body></html>
+    <div class="hero">
+        <div class="floating-icons">
+            <i class="lni lni-discord" style="top: 10%; left: 20%;"></i>
+            <i class="lni lni-heart" style="top: 30%; left: 70%;"></i>
+            <i class="lni lni-bolt" style="top: 60%; left: 40%;"></i>
+        </div>
+        <h1>Sala de sinais + Curso grátis</h1>
+        <p>Ganhe dinheiro copiando as minhas análises no mercado</p>
+        <a href="https://discord.gg/Q4TMB2jGqk">
+            <i class="lni lni-discord"></i> Acessar a sala grátis
+        </a>
+    </div>
+
+    <div class="links">
+        <a href="https://jotatips.com/rdd">Abra sua conta</a>
+        <a href="https://jotatips.pages.dev/xpto/">Robô de análise</a>
+        <a href="https://jotatips.pages.dev/curso">Aprenda analisar (curso)</a>
+        <a href="https://t.me/sacjota">Suporte</a>
+    </div>
+
+    <div class="social">
+        <h2>Conecte-se conosco</h2>
+        <div class="social-icons">
+            <a href="https://jotainvestimentos.com" target="_blank"><i class="lni lni-world"></i></a>
+            <a href="https://t.me/jotainvestimentos" target="_blank"><i class="lni lni-telegram"></i></a>
+            <a href="https://www.youtube.com/jotainvestimentos?sub_confirmation=1" target="_blank"><i class="lni lni-youtube"></i></a>
+            <a href="https://instagram.com/jotatips.ofc" target="_blank"><i class="lni lni-instagram"></i></a>
+        </div>
+    </div>
+
+    <footer>
+        2021 - 2024 Jota Tips © Todos os direitos reservados<br>
+        Esse site não possui nenhuma ligação com o Facebook, Twitter, Google ou Instagram<br>
+        Ao adentrar em nosso grupo free você concorda com as Regras do canal.<br>
+        <a class="link" href="/termos">Termos de uso</a> | <a class="link" href="/privacidade">Política de privacidade</a> | <a class="link" href="/consumivel">Produto consumível</a> <br>
+        <p>
+        NADA É IMPOSSÍVEL AO QUE CRER, E NÓS CREMOS!<br>
+        TODA HONRA E TODA GLÓRIA SEJA DADA AO <strong>SENHOR JESUS</strong></p>
+    </footer>
+</body>
+</html>
