--- a/criar-conta/index.html
+++ b/criar-conta/index.html
@@ -1,74 +1,90 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link href="css/output.css" rel="stylesheet">
-  <title>Acessar Grupo Grátis! – Sinais Pagantes</title>
-
-
- <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-56DSNPPX');</script>
-  <!-- End Google Tag Manager -->
-
-
-
+  <title>Acessar Grupo Grátis! + CURS0 COMPLETO</title>
 
   <!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1873192593140511');
-  fbq('track', 'PageView');
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1244028499537995');
+    fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1873192593140511&ev=PageView&noscript=1"
-  /></noscript>
+      src="https://www.facebook.com/tr?id=1244028499537995&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
-  
+
+  <style>
+    /* Animação de bump (pulsar) */
+    @keyframes bump {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    /* Estilo do botão com animação */
+    .bump-button {
+      animation: bump 1.5s infinite; /* Aplica a animação em loop */
+      transition: all 0.3s ease; /* Adiciona transição suave */
+      background-color: #19924E; /* Cor de fundo */
+      color: white; /* Cor do texto */
+      border: none; /* Remove a borda */
+      border-radius: 8px; /* Bordas arredondadas */
+      padding: 15px 30px; /* Espaçamento interno */
+      font-size: 16px; /* Tamanho da fonte */
+      font-weight: 600; /* Peso da fonte */
+      cursor: pointer; /* Cursor de ponteiro */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    }
+
+    /* Efeito hover (opcional) */
+    .bump-button:hover {
+      background-color: #147a3e; /* Cor de fundo ao passar o mouse */
+      transform: scale(1.05); /* Aumenta levemente o botão */
+    }
+  </style>
 </head>
 
 <body class="font-poppins">
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56DSNPPX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-
-
-  
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JM46SFJ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    
   <main class="flex flex-col min-h-[calc(100dvh)]">
     <div class="flex items-center justify-center bg-[#234D2B] py-[-10px]">
       <p class="mt-[20px] text-center text-[14px] font-bold text-white sm:text-[21px]">
-        Você e algumas pessoas foram selecionados
-        <br>
-        para participar deste programa.
+        Receba nossas análises
       </p>
     </div>
     <div class="flex flex-1 sm:min-h-[700px]">
-      <div class="flex flex-1 flex-col items-center gap-1 bg-hero_mobile bg-cover bg-center sm:bg-hero justify-center sm:justify-start sm:align-top sm:pt-[71px]">
+      <div
+        class="flex flex-1 flex-col items-center gap-1 bg-hero_mobile bg-cover bg-center sm:bg-hero justify-center sm:justify-start sm:align-top sm:pt-[71px]">
         <img src="images/logo-fortune-tiger.webp" alt="hero" class="w-[156px] pt-2 sm:w-[228px]">
         <p class="text-center font-[900] leading-tight text-[#00FF72] text-[25px] sm:text-[38px] mt-2">
           PARABÉNS!
           <br>
           <span class="text-white">SEU ACESSO AO CURSO FOI</span> LIBERADO
         </p>
-        <a href="https://t.me/jotainvestimentos" class="m-5 rounded-md bg-[#19924E] px-[30px] py-[15px] text-center text-[16px] font-semibold leading-0 text-white sm:text-[19px]" onclick="redirectGrupo()">
-         CADASTRE E GANHE O CURSO
-        </a>
+        <button
+          class="bump-button m-5"
+          onclick="redirectGrupo()">
+          CADASTRE E GANHE O CURSO
+        </button>
         <p class="text-[17px] font-medium text-[#FE0A00] sm:text-[24px]">
           RESTAM APENAS 3 VAGAS
         </p>
@@ -76,20 +92,33 @@
     </div>
     <div class="flex h-[100px] items-center justify-center bg-[#234D2B]">
       <p class="text-[14px] font-medium text-white sm:text-[21px]">
-        Todos os direitos reservados © 2024
+        Todos os direitos reservados © 2025
       </p>
     </div>
   </main>
 
-  
-
   <script>
     function redirectGrupo() {
-      fbq('track', 'InitiateCheckout');
-      kwaiq.track('lead');
-      window.open("https://lp.jotatips.com/xpto/", "_blank");
+      try {
+        fbq('track', 'InitiateCheckout');
+      } catch (e) {
+        console.error('Erro ao trackear o evento do Facebook Pixel:', e);
+      }
+
+      try {
+        if (typeof kwaiq !== 'undefined') {
+          kwaiq.track('lead');
+        } else {
+          console.warn('Kwaiq não está definido.');
+        }
+      } catch (e) {
+        console.error('Erro ao trackear o evento do Kwai:', e);
+      }
+
+      window.open("https://t.me/+Kwnq6iA2RB44YTMx", "_blank");
     }
   </script>
+</body>
+</html>
 
 
-</body></html>
