--- a/grupo-free/index.html
+++ b/grupo-free/index.html
@@ -38,9 +38,9 @@
         <section class="product">
             <img src="img/1.webp" alt="produto">
             <div class="product-info">
-                <h1>Análise da Roleta ao vivo</h1>
-                <p class="price" style="color: #007bff; font-size: 32px;"><b>R$ 998</b></p>
-                <button class="buy-btn">Comprar agora</button>
+                <h1>SALA DE SINAL + CURSO OPERACIONAL</h1>
+                <p class="price" style="color: #007bff; font-size: 32px;"><b>GRÁTIS</b> (free)</p>
+                <button class="buy-btn">Acessar agora</button>
 
                 <div style="font-size: 14px; color: #f3efef; margin-top: 10px; text-align: center;">
                     Acesso imediato | 30 dias de Garantia
@@ -127,12 +127,12 @@
             <div
                 style="display: flex; justify-content: center; align-items: center; width: 100%; flex-direction: column;">
                 <a style="background-color: #007bff; color: white; padding: 12px 0; font-size: 18px; font-weight: bold; border-radius: 5px; text-decoration: none; width: 100%; display: inline-block; text-align: center; transition: all 0.3s ease;"
-                    href="https://actuspay.com/step/flow1/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"
+                    href="https://t.me/+QY0iuyX4l-A4NDgx?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"
                     target="_blank">
                     Comprar Agora
                 </a>
                 <a style="border: 2px solid #007BFF; color: #007bff; padding: 12px 0; font-size: 18px; text-decoration: none; display: inline-block; text-align: center; width: 90%; margin-top: 10px; border-radius: 5px; text-transform: uppercase; white-space: nowrap;"
-                    href="https://actuspay.com/step/flow1/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"
+                    href="https://t.me/+QY0iuyX4l-A4NDgx?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"
                     target="_blank">
                     Adicionar ao Carrinho
                 </a>
@@ -190,7 +190,7 @@
 
                 // Redireciona o usuário após 500ms
                 setTimeout(function () {
-                    window.location.href = "https://actuspay.com/step/flow1/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"; // Substitua pelo link desejado
+                    window.location.href = "https://t.me/+QY0iuyX4l-A4NDgx?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"; // Substitua pelo link desejado
                 }, 500);
             }
         });
