--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="links">
         <a href="https://jotatips.com/rdd">Abra sua conta</a>
         <a href="https://jotatips.pages.dev/xpto/">Robô de análise</a>
-        <a href="https://jotatips.pages.dev/curso">Aprenda analisar (curso)</a>
+        <a href="https://jotatips.com/flow-gain/">Aprenda analisar (curso)</a>
         <a href="https://t.me/sacjota">Suporte</a>
     </div>
 
