--- a/criar-conta/index.html
+++ b/criar-conta/index.html
@@ -115,7 +115,7 @@
         console.error('Erro ao trackear o evento do Kwai:', e);
       }
 
-      window.open("https://t.me/+Kwnq6iA2RB44YTMx", "_blank");
+      window.open("https://t.me/+1R4bX3oKg6wzNDAx", "_blank");
     }
   </script>
 </body>
