--- a/flow-gain/index.html
+++ b/flow-gain/index.html
@@ -119,11 +119,11 @@
                         <!-- Botões -->
                         <div style="display: flex; justify-content: center; align-items: center; width: 100%; flex-direction: column;">
                             <a style="background-color: #007bff; color: white; padding: 12px 0; font-size: 18px; font-weight: bold; border-radius: 5px; text-decoration: none; width: 100%; display: inline-block; text-align: center; transition: all 0.3s ease;"
-                                href="https://pay.minbrand.com/step/flow01/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}" target="_blank">
+                                href="https://seguro.minbrand.com/r/IL3KRM8065?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}" target="_blank">
                                 Comprar Agora
                             </a>
                             <a style="border: 2px solid #007BFF; color: #007bff; padding: 12px 0; font-size: 18px; text-decoration: none; display: inline-block; text-align: center; width: 90%; margin-top: 10px; border-radius: 5px; text-transform: uppercase; white-space: nowrap;"
-                                href="https://pay.minbrand.com/step/flow01/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}" target="_blank">
+                                href="https://seguro.minbrand.com/r/IL3KRM8065?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}" target="_blank">
                                 Adicionar ao Carrinho
                             </a>
                         </div>
@@ -180,7 +180,7 @@
 
                 // Redireciona o usuário após 500ms
                 setTimeout(function () {
-                    window.location.href = "https://pay.minbrand.com/step/flow01/?src=loja-jotatips&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"; // Substitua pelo link desejado
+                    window.location.href = "https://seguro.minbrand.com/r/IL3KRM8065&utm_source=facebook&utm_medium=paid&utm_campaign={{campaign.name}}&utm_term={{adset.name}}&utm_content={{ad.name}}&fbadid={{ad.id}}"; // Substitua pelo link desejado
                 }, 500);
             }
         });
